--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -9,13 +9,21 @@ body {
 #imagewrap{
     display: flex;
     float: left;
-    max-width: 25%;
     max-height: 100%;
+    max-width: 30%;
 }
 
 #textwrap{
-    margin-left: 10px;
+    margin-left: 40px;
     float: left;
-    max-width: 25%;
+    max-height: 100%;
+}
+
+a{
+    text-decoration: none;
+}
+
+img{
+    max-width: 100%;
     max-height: 100%;
 }
