--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -4,19 +4,21 @@
     <h2>Active Listings</h2>
     <div id="list">
         {%for item in items%}
-            <div class="card">
-                <div class="card-body">
-                    <div id="imagewrap">
-                        <img src="{{item.image}}" class="img-fluid" >
+            <a href="{%url "item" item.id%}">
+                <div class="card">
+                    <div class="card-body">
+                        <div id="imagewrap">
+                            <img src="{{item.image}}" class="img-fluid" >
+                        </div>
+                        <div id="textwrap">
+                            <h5>{{item.title}}</h5>
+                            <h6>Price: ${{item.price}}</h6>
+                            <p>{{item.description}}</p>
+                            {{item.time}}
+                        </div>
                     </div>
-                    <div id="textwrap">
-                        <h5>{{item.title}}</h5>
-                        <h6>Price: ${{item.price}}</h6>
-                        <p>{{item.description}}</p>
-                        {{item.time}}
-                    </div>
-                </div>
-            </div>
+                </div>  
+            </a>
         {%endfor%}
     </div>
 {% endblock %}
