--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -16,8 +16,8 @@
             <textarea name="description" class="form-control" id="Description" rows="10"></textarea>
         </div>
         <div class="form-group">
-            <label for="price">Starting Bid Price</label>
-            <input name="price" type="text" class="form-control" id="price" placeholder="Starting Price for Bid">
+            <label for="bid">Starting Bid</label>
+            <input name="bid" type="text" class="form-control" id="bid" placeholder="Starting Price for Bid">
         </div>
         <div class="form-group">
             <label for="Image">Item Image URL</label>
