--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -12,7 +12,7 @@
                         </div>
                         <div id="textwrap">
                             <h5>{{item.title}}</h5>
-                            <h6>Price: ${{item.price}}</h6>
+                            <h6>Price: ${{item.price.price}}</h6>
                             <p>{{item.description}}</p>
                             {{item.time}}
                         </div>
