--- a/auctions/templates/auctions/item.html
+++ b/auctions/templates/auctions/item.html
@@ -5,29 +5,81 @@
 {%endblock%}
 
 {%block body%} 
+
+    {%if item.status == "close"%}
+        <h1>
+            Listing Closed
+            {%if item.price.bider == user%}
+                You Won The Bid
+            {%endif%}
+        </h1>          
+    {%endif%}
+
     <h1>Listing:{{item.title}}</h1>
-    
+
     <form method="post" action="{%url "item" item.id%}">
         {%if user.is_authenticated%}
             {%csrf_token%}
             {%if item in watchlist%} 
-                <button name="watchlist" value="False" type="submit" class="btn btn-primary btn-sm">Remove From Watchlist</button>
+                <button name="action" value="removewatch" type="submit" class="btn btn-primary btn-sm">Remove From Watchlist</button>
             {%else%}
-                <button name="watchlist" value="True" class="btn btn-primary btn-sm">Watchlist</button>
-            {%endif%}   
+                <button name="action" value="addwatch" class="btn btn-primary btn-sm">Watchlist</button>
+            {%endif%}  
+            {%if item.owner.first == user and item.status != "close" %} 
+                <button name="action" value="close" class="btn btn-primary btn-sm">Close Biding</button>
+            {%endif%}
         {%endif%}
-        {%if item.image%}
-            <div style="height: 300px; "><img src="{{item.image}}" class="img-fluid"></div>
-        {%endif%}
+    </form>
+
+    {%if item.image%}
+        <div style="height: 300px; margin:15px 0 15px; "><img src="{{item.image}}" class="img-fluid"></div>
+    {%endif%}
+
+    <form method="post" action="{%url "item" item.id%}">
+        {%csrf_token%}
         <p>{{item.description}}</p>
         <h4>${{item.price.price}}</h4>
         <h4>{{message}}</h4>
-        <small>{{item.price.id}} bid(s) so far</small>
-        {%if user.is_authenticated%}
+        <small>{{bid.count}} bid(s) so far</small>
+        {%if user.is_authenticated and item.status != "close"%}
             <input name=bid class="form-control" type="text" placeholder="Bid">
-            <div style="margin-top: 20px;">
-                <button type="submit" class="btn btn-primary">Place Bid</button>
+            <div style="margin: 20px 0 20px 0;">
+                <button name="action" value="bid" type="submit" class="btn btn-primary">Place Bid</button>
             </div>
         {%endif%}
     </form>
+
+    <h4>Details</h4>
+    <ul>
+        <li>Listed by: {{item.owner.first}}</li>
+        {%if item.category%}
+            <li>Category: {{item.category}}</li>
+        {%else%}
+            <li>Category: No Category Listed</li>
+        {%endif%}
+        {%if item.status == "close"%}
+            <li>Bid Won by: {{item.price.bider}}</li>
+        {%else%}
+            <li>Highest bider: {{item.price.bider}}</li>
+        {%endif%}
+    </ul>
+    
+    <form method="post" action="{%url "item" item.id%}">
+        {%csrf_token%}
+        {%if item.status != "close"%}
+            <div class="form-group">
+                <label for="comment">Comment</label>
+                <textarea name="comment" class="form-control" id="comment" rows="3"></textarea>
+            </div>
+            <button name="action" value="comment" type="submit" class="btn btn-primary">Comment</button>
+            {%for comment in comments%}
+                <div class="card" style="height: 100px;">
+                    <div class="card-body">
+                        {{comment}}
+                    </div>
+                </div>  
+            {%endfor%}
+        {%endif%}
+    </form>
+    
 {%endblock%}
