--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -24,8 +24,8 @@
             <input name="image" type="url" class="form-control" id="Image" placeholder="URL for image">
         </div>
         <div class="form-group">
-            <label for="Category">Category URL</label>
-            <input name="category" type="url" class="form-control" id="Category" placeholder="URL for category">
+            <label for="Category">Category</label>
+            <input name="category" type="text" class="form-control" id="Category" placeholder="Name of Category">
         </div>
         <button type="submit" class="btn btn-primary">Create</button>
     </form>
