--- a/auctions/templates/auctions/category.html
+++ b/auctions/templates/auctions/category.html
@@ -1,7 +1,7 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2>{{category}}</h2>
     <div id="list">
         {%for item in items%}
             <a href="{%url "item" item.id%}">
