--- a/auctions/templates/auctions/item.html
+++ b/auctions/templates/auctions/item.html
@@ -67,11 +67,13 @@
     <form method="post" action="{%url "item" item.id%}">
         {%csrf_token%}
         {%if item.status != "close"%}
+        {%if user.is_authenticated%}
             <div class="form-group">
                 <label for="comment">Comment</label>
                 <textarea name="comment" class="form-control" id="comment" rows="3"></textarea>
             </div>
             <button name="action" value="comment" type="submit" class="btn btn-primary">Comment</button>
+        {%endif%}
             {%for comment in comments%}
                 <div class="card" style="height: 100px;">
                     <div class="card-body">
